Fix typo: setUpInectedBundleClient https://bugs.webkit.org/show_bug.cgi?id=175655

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-08-17
Reviewed by Andreas Kling.

* UIProcess/API/Cocoa/WKProcessGroup.mm:
(setUpInjectedBundleClient):
(-[WKProcessGroup initWithInjectedBundleURL:]):

Canonical link: https://commits.webkit.org/192330@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220856 268f45cc-cd09-0410-ab3c-d52691b4dbfc